--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
             android:name=".ui.shop.ProductListActivity"
             android:exported="true"
             />
+        <activity android:name=".ui.vehicle.VehicleListActivity" android:exported="true" />
+        <activity android:name=".ui.vehicle.VehicleDetailActivity" android:exported="false" />
+        <activity android:name=".ui.vehicle.VehicleFormActivity" android:exported="false" />
 
         <!-- Product Detail Activity -->
         <activity
