--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <!-- GPS permissions -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,22 +20,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PRM392MobileCarLinker"
         android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
 
-        <!-- Product List Activity - LAUNCHER -->
+        <!-- Home Activity - LAUNCHER (Màn hình đầu tiên) -->
         <activity
-            android:name=".ui.shop.ProductListActivity"
-            android:exported="true">
+            android:name=".ui.home.HomeActivity"
+            android:exported="true"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
+        <!-- Product List Activity -->
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.shop.ProductListActivity"
             android:exported="false"
-            android:theme="@style/Theme.PRM392MobileCarLinker" />
+            android:parentActivityName=".ui.home.HomeActivity" />
 
         <!-- Product Detail Activity -->
         <activity
@@ -95,6 +102,48 @@
             android:name=".ui.dealer.DealerOrdersActivity"
             android:exported="true"
             android:label="Quản lý đơn hàng" />
+
+        <!-- Garage List Activity -->
+        <activity
+            android:name=".ui.garage.GarageListActivity"
+            android:exported="false"
+            android:label="Garage gần nhất"
+            android:parentActivityName=".ui.home.HomeActivity" />
+
+        <!-- Garage Detail Activity -->
+        <activity
+            android:name=".ui.garage.GarageDetailActivity"
+            android:exported="false"
+            android:label="Chi tiết Garage"
+            android:parentActivityName=".ui.garage.GarageListActivity" />
+
+        <!-- Service Category List Activity -->
+        <activity
+            android:name=".ui.servicecategory.ServiceCategoryListActivity"
+            android:exported="false"
+            android:label="Quản lý Gói Dịch Vụ"
+            android:parentActivityName=".ui.home.HomeActivity" />
+
+        <!-- Service Category Detail Activity -->
+        <activity
+            android:name=".ui.servicecategory.ServiceCategoryDetailActivity"
+            android:exported="false"
+            android:label="Chi tiết Gói Dịch Vụ"
+            android:parentActivityName=".ui.servicecategory.ServiceCategoryListActivity" />
+
+        <!-- Service Category Form Activity -->
+        <activity
+            android:name=".ui.servicecategory.ServiceCategoryFormActivity"
+            android:exported="false"
+            android:label="Thêm/Sửa Gói Dịch Vụ"
+            android:parentActivityName=".ui.servicecategory.ServiceCategoryListActivity" />
+
+        <!-- User Info Activity -->
+        <activity
+            android:name=".ui.user.UserInfoActivity"
+            android:exported="false"
+            android:label="Thông tin cá nhân"
+            android:parentActivityName=".ui.home.HomeActivity" />
 
     </application>
 
