--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,12 +45,16 @@
         </activity>
 
         <!-- Product List Activity -->
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="false"
+            android:theme="@style/Theme.PRM392MobileCarLinker" />
+
         <activity
             android:name=".ui.shop.ProductListActivity"
-            android:exported="true"
-            />
-            />
-            />
+            android:exported="true" />
+
         <activity android:name=".ui.vehicle.VehicleListActivity" android:exported="true" />
         <activity android:name=".ui.vehicle.VehicleDetailActivity" android:exported="false" />
         <activity android:name=".ui.vehicle.VehicleFormActivity" android:exported="false" />
